<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">AIO SSH Buttons Plugin</string>
    <string name="new_version_available">New version available: %1$s</string>
    <string name="click_to_download">Click to download</string>
    <string name="cancel">Cancel</string>
    <string name="hostname">Host name</string>
    <string name="port">Port</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="add_command">Add command</string>
    <string name="add_command_summary">Tap to add command</string>
    <string name="commands">Commands</string>
    <string name="name_">Name:</string>
    <string name="command_">Command:</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="show_result">Show result</string>
    <string name="warning">Warning</string>
    <string name="chinese_pm_warning">You use a smartphone with a system that suppress the work of background applications. For this reason, the AIO Plugin can not work properly. Click "Open Settings" and add plugin to the list of exceptions.</string>
    <string name="open_settings">Open settings</string>
    <string name="invalid_uid">Invalid UID. Reinstall plugin</string>
</resources>
